WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194421
Better error messages for module loader SPI
https://bugs.webkit.org/show_bug.cgi?id=194421
Summary
Better error messages for module loader SPI
Keith Miller
Reported
2019-02-07 16:46:47 PST
Better error messages for module loader SPI
Attachments
Patch
(2.59 KB, patch)
2019-02-07 16:47 PST
,
Keith Miller
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2019-02-07 16:47:06 PST
Created
attachment 361470
[details]
Patch
Yusuke Suzuki
Comment 2
2019-02-07 16:49:28 PST
r=me too. I think updating WebCore side too is better?
Keith Miller
Comment 3
2019-02-07 16:50:05 PST
Committed
r241172
: <
https://trac.webkit.org/changeset/241172
>
Radar WebKit Bug Importer
Comment 4
2019-02-07 16:51:28 PST
<
rdar://problem/47903002
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug