Better error messages for module loader SPI https://bugs.webkit.org/show_bug.cgi?id=194421

Reviewed by Saam Barati.

* API/JSAPIGlobalObject.mm:
(JSC::JSAPIGlobalObject::moduleLoaderImportModule):

Canonical link: https://commits.webkit.org/208841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241172 268f45cc-cd09-0410-ab3c-d52691b4dbfc